# RAG-from-scratch

./: .env  .gitignore  Fluent Python.txt  README.md  basic_ai.txt  bm25_search.py  cleanRAG.py  context.md  conversation_memory.json  cosine_similarity.py  decomposer.py  embed_cache_ingest.py  embedding.py  groqclient.py  ingest.py  main.py  memory.py  preprocessor.py  prompt_builder.py  pyproject.toml  query_rewriter.py  reranker.py  retriever.py  rrf_merge.py  split_text.py  storage.py  test.py  text_chunker.py
core/: cosine_similarity.py  ingest.py  loader.py  retriever.py  storage.py  text_chunker.py
data/: basic_greets.json  faq_enteries.json
guard/: embed_cache_ingest.py  llmlayer.py  preprocessor.py
llm/: decomposer.py  groqclient.py  query_rewriter.py  queryschema.py
search/: bm25_search.py  rrf_merge.py
utils/: cleanRAG.py
verify/: answerschema.py  quote_search.py
